# mnemosyne

./: .dockerignore  .env.example  .gitattributes  .gitignore  0.15.0  ARCHITECTURE.md  BETA_GAP_REPORT.md  CLAUDE.md  CONTRIBUTING.md  CUserspaul_PROJECTSmnemosynecorpus_task.txt  DEPLOYMENT.md  Dockerfile  INTEGRATION.md  MANUAL_ACCESSIBILITY_TEST.md  Makefile  PLUGIN_AUTHOR_GUIDE.md  README.md  ROADMAP.md  VISION_ALIGNMENT.md  WCAG_AUDIT.md  alembic.ini  bootstrap_db.py  capture_lang_data.py  capture_lang_data_v2.py  corpus_candidates.txt  corpus_task.txt  docker-compose.yml  mnemosyne_language_specific.txt  prompt.txt  pyproject.toml  requirements.txt  setup.py  tmp_test_migration.db
.claude/: settings.local.json
.github/: AGENTS.md
.github/workflows/: corpus-validate.yml  smoke.yml  test.yml
alembic/: env.py
alembic/versions/: 0000_baseline.py  0001_canonical_object_graph.py  0002_surface_forms.py  0003_first_seen.py  0004_user_language_preferences.py  0005_users_auth.py  0006_review_events.py  0007_user_fsrs_params.py  0008_clean_oov_confidence_notes.py  0009_parsed_texts_user_id.py  0010_vocabulary_grammar.py  0011_term_progress.py  0012_content_gap_signal.py  0013_corpus_ingestions.py  0014_sentence_review_items.py  0015_reinforcement_learning.py  0016_analytics.py  0017_corpus_tags.py  0018_corpus_notes_hash.py  0019_collections_log.py
backend/: CATALOGUE_AUDIT.md  main.py  models.py
backend/api/: dependencies.py
backend/auth/: passwords.py  tokens.py
backend/cache/: logeion_cache.db
backend/core/: cache.py  classical_normalize.py  config.py  database.py  jobs.py  jobs_redis.py  limiter.py  vocab_index.py
backend/corpus/: acquisition.py  build.py  cache.py  cli.py  levels.py  lockfile.py  manifest.py  quality.py  verifier.py
backend/dictionary/: enrichment.py  etymology.py  logeion.py  perseus.py  phrase_families.py  translation.py  wiktionary.py
backend/difficulty/: profiles.py  scorer.py
backend/ingestion/: fetcher.py  validator.py
backend/lesson/: cloze.py  concepts.py  context.py  distractors.py  formatters.py  generators.py  l10n.py  nuance_pairs.py  practice.py  practice_hooks.py  providers.py  transformations.py
backend/lesson_extraction/: __init__.py  engine.py  registry.py  types.py
backend/morphology/: ar_adapter.py  he_adapter.py  hi_adapter.py  tr_adapter.py  tr_stanza_adapter.py
backend/nuance/: __init__.py  ar.py  coverage.py  cultural.py  de.py  dimensions.py  en.py  es.py  fa.py  fr.py  grc.py  he.py  interface.py  it.py  ja.py  ko.py  la.py  pt.py  registry.py  ru.py  zh.py
backend/parsing/: canonical.py  contract.py  pipeline.py  plugin_interface.py  plugin_loader.py
backend/plugins/: arabic.py  cefr_vocab.py  chinese.py  english.py  fake_cjk.py  fake_rtl.py  finnish.py  french.py  german.py  greek_koine.py  hebrew.py  hindi.py  italian.py  japanese.py  korean.py  latin.py  persian.py  portuguese.py  russian.py  spanish.py  spanish_mvp.py  spanish_stub.py  stub_en.py  stub_fr.py  turkish.py
backend/schemas/: auth.py  curriculum.py  ingest.py  knowledge.py  language.py  lesson.py  metrics.py  parse.py  reading.py  sentence_review.py  sources.py  term_progress.py  translate.py  user.py
backend/services/: parse_persistence.py  (+1 more)
corpora/: manifest.lock.json  manifest.yaml
data/: README.md  cultural_references_seed.yaml
docs/: ACCESSIBILITY_MANUAL_TEST.md  GITHUB.md  MEMORY_MAP_AUDIT.md  NUANCE_COVERAGE.md  STRONG_SUGGESTIONS.md  WCAG_MANUAL_TEST_PLAN.md  corpus_pipeline.md  dictionary_mode.md  index.html  mnemosyne_next_steps.md  model_backed_morphology_hi_tr.md  offline_scripts.md  segmentation_languages.md  semitic_morphology_spike.md
frontend/: index.html  manifest.json  package-lock.json  package.json  privacy.html  sw.js
images/: logo_idea.txt
mnemosyne/: __init__.py  config.py  test_pipeline.py  utils.py
scripts/: .env.example  _smoke_test_pipeline.py  add_fl_keys.py  audit_cefr_vocab.py  audit_cultural_quality.py  audit_nuance_coverage.py  build_cultural_catalog.py  build_xiehouyu_csv.py  cleanup_orphaned_corpus.py  extend_cultural_catalogue.py  fetch_logeion_enrichment.py  fetch_wiktionary_idioms.py  fill_i18n.py  flag_cross_language_cognates.py  gen_etymology.py  gen_phrase_families.py  gen_verbal_government.py  harvest_language_data.py  import_cultural_sources.py  infer_subcategory.py  ingest_classical_morph.py  ingest_kaikki.py  ingest_kaikki_grc_morph.py  ingest_kaikki_grc_verb_morph.py  ingest_kaikki_la_morph.py  ingest_kaikki_la_verb_morph.py  promote_cultural_drafts.py  remove_seed_entries.py  review_cultural_draft.py  smoke_test_pipeline.py
tmp/: patch_i18n.py  patch_i18n_analytics.py  patch_i18n_annotation_search.py  patch_i18n_corpus.py  patch_i18n_corpus_drills.py  patch_i18n_import.py  patch_i18n_notes_density.py  patch_i18n_offline.py  patch_i18n_polish.py  patch_i18n_reading_history.py  patch_i18n_sentence_translate.py
(+640 files in other folders)
