[tool.poetry]
name = "mnemosyne"
version = "0.1.0"
description = "Turn text into living language lessons."
authors = ["OpenAI <support@openai.com>"]
readme = "README.md"
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
redis = "^5.0.8"
python-multipart = "^0.0.9"
alembic = "^1.13"
spacy = "^3.7"
# After `poetry install`, download the model once:
#   python -m spacy download es_core_news_sm
httpx = "^0.27.0"
beautifulsoup4 = "^4.12"
sentry-sdk = { version = "^2.0", extras = ["fastapi"] }
slowapi = "^0.1.9"
passlib = { version = "^1.7", extras = ["bcrypt"] }
python-jose = { version = "^3.3", extras = ["cryptography"] }

# ── CJK extras (optional) ─────────────────────────────────────────────────────
# Required for the Mandarin Chinese plugin (backend/plugins/chinese.py).
# Install with:  poetry install --extras cjk
jieba    = { version = "^0.42", optional = true }
pypinyin = { version = "^0.50", optional = true }
langdetect = "^1.0.9"
typer = ">=0.13"
rich = "^13.0"
pyyaml = "^6.0"

[tool.poetry.extras]
cjk = ["jieba", "pypinyin"]

[tool.poetry.scripts]
mnemosyne-corpus = "backend.corpus.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.8"
aiosqlite = "^0.20.0"
ruff = "^0.5.6"
mypy = "^1.11.1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
